--- a/config/yugabyte/regression_pipelines/miscellaneous/postgres/MG2_multi_statement_transaction.yaml
+++ b/config/yugabyte/regression_pipelines/miscellaneous/postgres/MG2_multi_statement_transaction.yaml
@@ -5,7 +5,7 @@ username: {{username}}
 password: {{password}}
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
-loaderthreads: 1
+loaderThreads: 1
 terminals: 24
 collect_pg_stat_statements: true
 yaml_version: v1.0
@@ -107,11 +107,11 @@ microbenchmark:
                         - query: INSERT INTO audit_table_1(account_id_1, event_id_1, user_id_1, delta_1) VALUES(?,?,?,?)
                           bindings:
                               -   util: PrimaryIntGen
-                                  params: [ 2000000, 100000000 ]
+                                  params: [ 2000000, 10000000000 ]
                               -   util: PrimaryDateGen
                                   params: [ 100000000 ]
                               -   util: PrimaryIntGen
-                                  params: [ 2000000, 100000000 ]
+                                  params: [ 2000000, 10000000000 ]
                               -   util: RandomNoWithDecimalPoints
                                   params: [ 1, 1000000, 2 ]
                         - query: UPDATE accounts_1 SET bal_1 = ? WHERE account_id_1 = ? and user_id_1 = ?
