--- a/src/main/resources/benchmarks/perf-dataloader/datatype-mapping.properties
+++ b/src/main/resources/benchmarks/perf-dataloader/datatype-mapping.properties
@@ -2,7 +2,8 @@
 
 # minimum,maximum
 integer=RandomInt:2:1,rows
-
+numeric=RandomNumber:2:1,rows
+bigint=RandomNumber:2:1,rows
 #
 boolean=RandomBoolean:0:
 
@@ -24,8 +25,6 @@ text=RandomAString:2:1,1000
 #
 uuid=RandomUUID:0:
 
-# minimum,maximum
-numeric=RandomNumber:2:1,rows
 
 # arraySize, minLength,maxLength
 array=RandomTextArrayGen:3:1,20,20
