--- a/src/main/resources/benchmarks/perf-dataloader/fk-mapping.properties
+++ b/src/main/resources/benchmarks/perf-dataloader/fk-mapping.properties
@@ -1,4 +1,6 @@
 integer=OneNumberFromArray:int
+bigint=OneNumberFromArray:int
+smallint=OneNumberFromArray:int
 numeric=OneNumberFromArray:int
 
 date=OneStringFromArray:string
