--- a/src/main/resources/benchmarks/perf-dataloader/pk-mapping.properties
+++ b/src/main/resources/benchmarks/perf-dataloader/pk-mapping.properties
@@ -2,6 +2,7 @@
 integer=PrimaryIntGen:2:1,rows
 # startNumber,endNumber,desiredLength
 string=RandomPKString:3:1,rows,1000
+text=RandomPKString:3:1,rows,1000
 
 # startNumber,length
 string1=HashedPrimaryStringGen:2:1,5
@@ -23,6 +24,7 @@ character=RandomAString:2:1,max
 timestampwithtimezone=RandomTimestampWithTimeZone:1:rows
 timestampwithouttimezone=RandomTimestampWithoutTimeZone:1:rows
 smallint=RandomInt:2:1,rows
+bigint=RandomInt:2:1,rows
 tsvector=RandomAString:2:1,rows
 
 
