--- a/config/yugabyte/regression_pipelines/miscellaneous/yb_colocated/MG1_analyze_table.yaml
+++ b/config/yugabyte/regression_pipelines/miscellaneous/yb_colocated/MG1_analyze_table.yaml
@@ -6,7 +6,7 @@ username: {{username}}
 password: {{password}}
 batchsize: 128
 isolation: TRANSACTION_REPEATABLE_READ
-loaderthreads: 1
+loaderThreads: 4
 terminals: 1
 collect_pg_stat_statements: true
 yaml_version: v1.0
@@ -22,14 +22,243 @@ microbenchmark:
     properties:
         setAutoCommit: true
         create:
-            - drop table IF EXISTS nets_1;
-            - create table nets_1(op_id_1 text,work_type_1 text,work_id_1 text,sequence_id_1 text,source_1 text,owner_1 text,state_1 text,resource_id_1 text,tracing_data_1 text,created_1 timestamp with time zone,modified_1 timestamp with time zone,timeout_1 timestamp with time zone,retry_count_1 bigint,db_user_id_1 text,shard_id_1 smallint,ingest_time_1 timestamp with time zone,label_1 text,metadata_1 text,primary key (db_user_id_1, shard_id_1, op_id_1 ));
+            - drop table IF EXISTS nets_60g_1;
+            - drop table IF EXISTS nets_60g_indexed_1;
+            - drop table IF EXISTS nets_100g_1;
+            - drop table IF EXISTS nets_250g_1;
+            - create table nets_60g_1(op_id_1 text,work_type_1 text,work_id_1 text,sequence_id_1 text,source_1 text,owner_1 text,state_1 text,resource_id_1 text,tracing_data_1 text,created_1 timestamp with time zone,modified_1 timestamp with time zone,timeout_1 timestamp with time zone,retry_count_1 bigint,db_user_id_1 text,shard_id_1 smallint,ingest_time_1 timestamp with time zone,label_1 text,metadata_1 text,primary key (db_user_id_1, shard_id_1, op_id_1 ));
+            - create table nets_60g_indexed_1(op_id_1 text,work_type_1 text,work_id_1 text,sequence_id_1 text,source_1 text,owner_1 text,state_1 text,resource_id_1 text,tracing_data_1 text,created_1 timestamp with time zone,modified_1 timestamp with time zone,timeout_1 timestamp with time zone,retry_count_1 bigint,db_user_id_1 text,shard_id_1 smallint,ingest_time_1 timestamp with time zone,label_1 text,metadata_1 text,primary key (db_user_id_1, shard_id_1, op_id_1 ));
+            - CREATE INDEX ON nets_60g_indexed_1(sequence_id_1,work_id_1)
+            - create table nets_100g_1(op_id_1 text,work_type_1 text,work_id_1 text,sequence_id_1 text,source_1 text,owner_1 text,state_1 text,resource_id_1 text,tracing_data_1 text,created_1 timestamp with time zone,modified_1 timestamp with time zone,timeout_1 timestamp with time zone,retry_count_1 bigint,db_user_id_1 text,shard_id_1 smallint,ingest_time_1 timestamp with time zone,label_1 text,metadata_1 text,primary key (db_user_id_1, shard_id_1, op_id_1 ));
+            - create table nets_250g_1(op_id_1 text,work_type_1 text,work_id_1 text,sequence_id_1 text,source_1 text,owner_1 text,state_1 text,resource_id_1 text,tracing_data_1 text,created_1 timestamp with time zone,modified_1 timestamp with time zone,timeout_1 timestamp with time zone,retry_count_1 bigint,db_user_id_1 text,shard_id_1 smallint,ingest_time_1 timestamp with time zone,label_1 text,metadata_1 text,primary key (db_user_id_1, shard_id_1, op_id_1 ));
 
         cleanup:
-            - drop table IF EXISTS nets_1;
+            - drop table IF EXISTS nets_60g_1;
+            - drop table IF EXISTS nets_60g_indexed_1;
+            - drop table IF EXISTS nets_100g_1;
+            - drop table IF EXISTS nets_250g_1;
 
         loadRules:
-            - table: nets_
+            - table: nets_60g_
+              count: 1
+              rows: 100000000
+              columns:
+                    - name: op_id_
+                      count: 1
+                      util: PrimaryStringGen
+                      params: [ 1, 50 ]
+                    - name: work_type_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: work_id_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: sequence_id_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: source_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: owner_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: state_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: resource_id_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: tracing_data_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: created_
+                      count: 1
+                      util: CurrentTime
+                    - name: modified_
+                      count: 1
+                      util: CurrentTime
+                    - name: timeout_
+                      count: 1
+                      util: CurrentTime
+                    - name: retry_count_
+                      count: 1
+                      util: RandomInt
+                      params: [ 1, 50 ]
+                    - name: db_user_id_
+                      count: 1
+                      util: HashedRandomString
+                      params: [ 1, 500, 10]
+                    - name: shard_id_
+                      count: 1
+                      util: RandomNumber
+                      params: [ 1, 50 ]
+                    - name: ingest_time_
+                      count: 1
+                      util: CurrentTime
+                    - name: label_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: metadata_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+
+            - table: nets_60g_indexed_
+              count: 1
+              rows: 100000000
+              columns:
+                    - name: op_id_
+                      count: 1
+                      util: PrimaryStringGen
+                      params: [ 1, 50 ]
+                    - name: work_type_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: work_id_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: sequence_id_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: source_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: owner_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: state_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: resource_id_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: tracing_data_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: created_
+                      count: 1
+                      util: CurrentTime
+                    - name: modified_
+                      count: 1
+                      util: CurrentTime
+                    - name: timeout_
+                      count: 1
+                      util: CurrentTime
+                    - name: retry_count_
+                      count: 1
+                      util: RandomInt
+                      params: [ 1, 50 ]
+                    - name: db_user_id_
+                      count: 1
+                      util: HashedRandomString
+                      params: [ 1, 500, 10]
+                    - name: shard_id_
+                      count: 1
+                      util: RandomNumber
+                      params: [ 1, 50 ]
+                    - name: ingest_time_
+                      count: 1
+                      util: CurrentTime
+                    - name: label_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: metadata_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+
+            - table: nets_100g_
+              count: 1
+              rows: 100000000
+              columns:
+                    - name: op_id_
+                      count: 1
+                      util: PrimaryStringGen
+                      params: [ 1, 50 ]
+                    - name: work_type_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: work_id_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: sequence_id_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: source_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: owner_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: state_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: resource_id_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: tracing_data_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: created_
+                      count: 1
+                      util: CurrentTime
+                    - name: modified_
+                      count: 1
+                      util: CurrentTime
+                    - name: timeout_
+                      count: 1
+                      util: CurrentTime
+                    - name: retry_count_
+                      count: 1
+                      util: RandomInt
+                      params: [ 1, 50 ]
+                    - name: db_user_id_
+                      count: 1
+                      util: HashedRandomString
+                      params: [ 1, 500, 10]
+                    - name: shard_id_
+                      count: 1
+                      util: RandomNumber
+                      params: [ 1, 50 ]
+                    - name: ingest_time_
+                      count: 1
+                      util: CurrentTime
+                    - name: label_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+                    - name: metadata_
+                      count: 1
+                      util: RandomAString
+                      params: [ 50, 50 ]
+
+            - table: nets_250g_
               count: 1
               rows: 100000000
               columns:
@@ -103,10 +332,34 @@ microbenchmark:
                       params: [ 50, 50 ]
 
         executeRules:
-            - workload: G1_Analyze
+            - workload: G1_1_Analyze_60G_table
               time_secs: 1800
               run:
                   - name: analyze_1
                     weight: 100
                     queries:
-                        - query: analyze nets_1
+                        - query: analyze nets_60g_1
+
+            - workload: G1_2_Analyze_60G_table_with_1_index
+              time_secs: 1800
+              run:
+                  - name: analyze_1
+                    weight: 100
+                    queries:
+                        - query: analyze nets_60g_indexed_1
+
+            - workload: G1_3_Analyze_100G_table
+              time_secs: 1800
+              run:
+                  - name: analyze_1
+                    weight: 100
+                    queries:
+                        - query: analyze nets_100g_1
+
+            - workload: G1_4_Analyze_250G_table
+              time_secs: 1800
+              run:
+                  - name: analyze_1
+                    weight: 100
+                    queries:
+                        - query: analyze nets_250g_1
