--- a/config/yugabyte/regression_pipelines/miscellaneous/yb_colocated/MG1_analyze_table.yaml
+++ b/config/yugabyte/regression_pipelines/miscellaneous/yb_colocated/MG1_analyze_table.yaml
@@ -332,6 +332,15 @@ microbenchmark:
                       params: [ 50, 50 ]
 
         executeRules:
+            - workload: G1_0_Ingnore_workload
+              time_secs: 300
+              skipReport: true
+              run:
+                  - name: analyze_1
+                    weight: 100
+                    queries:
+                        - query: SELECT pg_sleep(7200);
+
             - workload: G1_1_Analyze_60G_table
               time_secs: 1800
               run:
