Added workload to be skipped to avoid compaction and workload execution to happen in parallel

--- a/config/yugabyte/regression_pipelines/miscellaneous/postgres/MG1_analyze_table.yaml
+++ b/config/yugabyte/regression_pipelines/miscellaneous/postgres/MG1_analyze_table.yaml
@@ -12,10 +12,11 @@ yaml_version: v1.0
 disable_explain: true
 works:
     work:
+        serial: true
         time_secs: 1800
         active_terminals: 1
         rate: unlimited
-        warmup: 60
+        warmup: 0
 microbenchmark:
     class: com.oltpbenchmark.benchmarks.featurebench.customworkload.YBDefaultMicroBenchmark
     properties:
