Added workload to be skipped to avoid compaction and workload execution to happen in parallel

--- a/config/yugabyte/regression_pipelines/miscellaneous/yugabyte/MG1_analyze_table.yaml
+++ b/config/yugabyte/regression_pipelines/miscellaneous/yugabyte/MG1_analyze_table.yaml
@@ -10,6 +10,8 @@ terminals: 1
 collect_pg_stat_statements: true
 yaml_version: v1.0
 disable_explain: true
+enable_flushing: false
+enable_compaction : false
 works:
     work:
         time_secs: 1800
