using PrimaryStringGen for text/string datatype with primary key

--- a/src/main/resources/benchmarks/perf-dataloader/pk-mapping.properties
+++ b/src/main/resources/benchmarks/perf-dataloader/pk-mapping.properties
@@ -1,9 +1,9 @@
 # lowerRange,upperRange
 integer=PrimaryIntGen:2:1,rows
 # startNumber,endNumber,desiredLength
-string=RandomPKString:3:1,rows,1000
-charactervarying=RandomPKString:3:1,rows,1000
-text=RandomPKString:3:1,rows,1000
+string=PrimaryStringGen:2:1,1000
+charactervarying=PrimaryStringGen:2:1,1000
+text=PrimaryStringGen:2:1,1000
 
 # startNumber,length
 string1=HashedPrimaryStringGen:2:1,5
