Update included index, Modified index CW1/2/3, Added NOWAIT/SKIPLOCKED, Index and IndexOnly scans

--- a/config/yugabyte/regression_pipelines/conditional_workloads/yugabyte/CW1_on_conflict_do_nothing.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/yugabyte/CW1_on_conflict_do_nothing.yaml
@@ -107,6 +107,7 @@ microbenchmark:
                     weight: 100
                     queries:
                         - query: INSERT INTO accounts_1(account_id_1,user_id_1,addr_1,bal_1) VALUES (?,?,?,?) ON CONFLICT (user_id_1, account_id_1, addr_1, bal_1) DO NOTHING
+                          count: 10
                           bindings:
                               -   util: PrimaryIntGen
                                   params: [ 15000000, 20000000 ]
@@ -140,6 +141,7 @@ microbenchmark:
                     weight: 100
                     queries:
                         - query: INSERT INTO accounts_1(account_id_1,user_id_1,addr_1,bal_1) VALUES (?,?,?,?) ON CONFLICT (user_id_1, account_id_1, addr_1, bal_1) DO NOTHING RETURNING *
+                          count: 10
                           bindings:
                               -   util: PrimaryIntGen
                                   params: [ 25000001, 30000000 ]
