--- a/config/yugabyte/regression_pipelines/conditional_workloads/yb_colocated/CW1_on_conflict_do_nothing.yaml
+++ b/config/yugabyte/regression_pipelines/conditional_workloads/yb_colocated/CW1_on_conflict_do_nothing.yaml
@@ -108,6 +108,7 @@ microbenchmark:
                     weight: 100
                     queries:
                         - query: INSERT INTO accounts_1(account_id_1,user_id_1,addr_1,bal_1) VALUES (?,?,?,?) ON CONFLICT (user_id_1, account_id_1, user_id_1, bal_1) DO NOTHING
+                          count: 10
                           bindings:
                               -   util: PrimaryIntGen
                                   params: [ 15000000, 20000000 ]
@@ -141,6 +142,7 @@ microbenchmark:
                     weight: 100
                     queries:
                         - query: INSERT INTO accounts_1(account_id_1,user_id_1,addr_1,bal_1) VALUES (?,?,?,?) ON CONFLICT (user_id_1, account_id_1, user_id_1, bal_1) DO NOTHING RETURNING *
+                          count: 10
                           bindings:
                               -   util: PrimaryIntGen
                                   params: [ 25000001, 30000000 ]
